--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
+    "angular5-csv": "^0.2.10",
     "concurrently": "^3.5.1",
     "core-js": "^2.5.4",
     "mysql2": "^1.5.3",
